<resources>
    <string name="g">g</string>
    <string name="app_name">Datz Ratz</string>
    <string name="home">Home</string>
    <string name="add_snake">Add Snake</string>
    <string name="view_previous_orders">View Previous Orders</string>
    <string name="datz_logo">Datz logo</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="phone">815–271–5715</string>
    <string name="business_name">Datz Cichlids and Reptiles</string>
    <string name="view_order">View Order</string>
    <string name="name">Name</string>
    <string name="weight">Weight in grams</string>
    <string name="morph">Morph</string>
    <string name="date_of_last_meal">Date of last meal</string>
    <string name="rodent">Rodent</string>
    <string name="grams">grams</string>
    <string name="previous_meal">Last meal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_order">Current Order</string>
    <string name="_4553_prime_pkwy">4553 Prime PKWY</string>
    <string name="mchenry_il_60050">McHenry IL 60050</string>
    <string name="_1">1</string>
    <string name="_1_75">$1.75</string>
    <string name="total_order">Total Order</string>
    <string name="_205">$205</string>
    <string name="send_order">Send Order</string>
    <string name="background_image">background Image</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">Logout</string>
    <string name="sunshine">Sunshine</string>
    <string name="albino">Albino</string>
    <string name="_225g">225g</string>
    <string name="march_12_2021">March 12, 2021</string>
    <string name="_222g">222g</string>
    <string name="small_asf">Small ASF</string>
    <string name="view_previous_orders_fragment">View Previous Orders Fragment</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="reset_link">A link to reset your password will be sent to email entered.</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_registered">You have been registered successfully.</string>
    <string name="log">Log</string>
    <string name="in_shed">In Shed</string>
    <string name="_0">0</string>
    <string name="add_rodent">Add Rodent</string>
    <string name="log_for">Log for:</string>
    <string name="snake">snake</string>
    <string name="_5_4_2021">Example 5/4/2021</string>
    <string name="no_entry">No Entry</string>
    <string name="add_snake_info">Add Snake Info</string>
    <string name="blank" />
    <string name="pickup_day">Pickup Day</string>
    <string name="today">Today</string>
    <string name="pick_up_time">Pick up Time</string>
    <string name="_12_00_1_00pm">Example 12:00–1:00pm</string>
    <string name="order_total">Order Total:</string>
    <string name="datz_ratz_v1_3">Datz Ratz v1.3</string>

    <string-array name="rodents">
        <item>Pinky Mouse</item>
        <item>Fuzzy Mouse</item>
        <item>Hopper Mouse</item>
        <item>Small Mouse</item>
        <item>Medium Mouse</item>
        <item>Large Mouse</item>
        <item>Pinky ASF</item>
        <item>Hopper ASF</item>
        <item>Small ASF</item>
        <item>Medium ASF</item>
        <item>Large ASF</item>
        <item>Jumbo ASF</item>
        <item>Pinky Rat</item>
        <item>Weaned Rat</item>
        <item>Small Rat</item>
        <item>Medium Rat</item>
        <item>Large Rat</item>
        <item>Jumbo Rat</item>
        <item>None</item>
    </string-array>

</resources>