<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <!--Create a group-->
    <group android:checkableBehavior="single">


        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/home" />


        <item
            android:id="@+id/add_snake"
            android:icon="@drawable/ic_action_add"
            android:title="@string/add_snake" />

        <item
            android:id="@+id/view_order"
            android:icon="@drawable/ic_action_order"
            android:title="@string/current_order" />

        <item
            android:id="@+id/logout_app"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/logout" />


    </group>


</menu>