<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/datz_black"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="start"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/datz_logo"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/business_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/phone" />

</LinearLayout>