<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/datz_black"
    android:orientation="vertical"
    tools:context=".AddSnakeLog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout

        android:id="@+id/titleLayout"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp">
    <TextView
        android:id="@+id/logTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/log_for"
        />

        <TextView
            android:id="@+id/logSnakeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/snake"
            />



    </LinearLayout>


    <TextView
        android:id="@+id/weightLogTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/weight"
        android:textColor="@color/datz_grey"
        android:textSize="15sp"
        android:layout_below="@+id/titleLayout"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/weightLogInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightLogTag"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/rodentLogTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightLogInput"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/add_rodent"
        android:textColor="@color/datz_grey"
        android:textSize="15sp"
        tools:ignore="SmallSp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rodentLogTag"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/datz_black"
            android:inputType="none"
            android:textColor="@color/datz_grey"
            android:textSize="20sp"
            tools:ignore="LabelFor" />


    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rodentLogTag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/in_shed"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/logBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/log" />
    </RelativeLayout>


</ScrollView>