<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/datz_black"
    android:layout_margin="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/datz_black">


        <TextView
            android:text="@string/_1"
            android:id="@+id/txt_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/datz_black"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="8dp" />

        <TextView
            android:layout_toEndOf="@+id/txt_qty"
            android:text="@string/small_asf"
            android:id="@+id/txt_rodent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/datz_black"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="8dp" />

        <TextView
            android:layout_toEndOf="@+id/txt_rodent"
            android:text="@string/_1_75"
            android:id="@+id/txt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/datz_black"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="8dp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>