<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/datz_black"
    android:orientation="vertical"
    tools:context=".AddSnakeFragment">

    <TextView
        android:id="@+id/addSnakeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_snake_info"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/nameTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/name"
        android:textColor="@color/datz_grey"
        android:textSize="15sp"
        tools:ignore="SmallSp"
        android:layout_below="@+id/addSnakeTitle"/>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTag"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:focusable="true"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/weightTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameInput"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/weight"
        android:textColor="@color/datz_grey"
        android:textSize="15sp"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightTag"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/morphTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightInput"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/morph"
        android:textColor="@color/datz_grey"
        android:textSize="15sp"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/morphInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/morphTag"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/dateTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/morphInput"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/date_of_last_meal"
        android:textColor="@color/datz_grey"
        android:textSize="15sp"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateTag"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:hint="@string/_5_4_2021"
        android:textColorHint="@color/datz_grey"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/rodentTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateInput"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/previous_meal"
        android:textColor="@color/datz_grey"
        android:textSize="15sp"
        tools:ignore="SmallSp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rodentTag"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/datz_black"
            android:inputType="none"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="LabelFor" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rodentTag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/add_snake" />


</RelativeLayout>
